[package]
name = "learnloop"
version = "0.1.0"
edition = "2021"
default-run = "learnloop"

# Two binaries: "learnloop" (full name) and "ll" (short alias)
# Both point to the same code — like having a symlink
[[bin]]
name = "learnloop"
path = "src/main.rs"

[[bin]]
name = "ll"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
colored = "2"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tabled = "0.17"
blake3 = "1"
toml = "0.8"
dirs = "5"

[dev-dependencies]
mockito = "1"
assert_cmd = "2"
predicates = "3"
tempfile = "3"
