[package]
name = "glow-cli"
version = "2.6.0"
edition = "2021"
default-run = "glow"

# Two binaries: "glow" (full name) and "glw" (short alias)
# Both point to the same code — like having a symlink
[[bin]]
name = "glow"
path = "src/main.rs"

[[bin]]
name = "glw"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
anyhow = "1"
colored = "2"
reqwest = { version = "0.12", features = ["blocking", "json", "multipart", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tabled = "0.17"
toml = "0.8"
dirs = "5"
open = "5"

[dev-dependencies]
mockito = "1"
assert_cmd = "2"
predicates = "3"
tempfile = "3"
