[package]
name = "glow-cli"
version = "2.11.1"
edition = "2021"
default-run = "glow"

# Library crate — both bins (glow, glw) in src/bin/ are thin wrappers around run().
[lib]
name = "glow"
path = "src/lib.rs"

[dependencies]
axum = "0.8"
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
anyhow = "1"
colored = "2"
reqwest = { version = "0.12", features = ["blocking", "json", "multipart", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tabled = "0.17"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
dirs = "5"
open = "5"

[dev-dependencies]
mockito = "1"
assert_cmd = "2"
predicates = "3"
tempfile = "3"
